--- a/index.html
+++ b/index.html
@@ -4,27 +4,27 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Weather App</title>
-    <link rel="stylesheet" href="../Weather App/CSS/index.css" />
+    <link rel="stylesheet" href="../CSS/index.css" />
   </head>
   <body>
     <div class="card">
       <div class="search">
         <input type="text" placeholder="enter city name" spellcheck="false" />
-        <button><img src="../Weather App/images/search.png" alt="search" /></button>
+        <button><img src="../images/search.png" alt="search" /></button>
       </div>
 
       <div class="error">
         <p>Invalid city Name</p>
       </div>
       <div class="weather">
-        <img class="weather-icon" src="../Weather App/images/rain.png" alt="rain-image" />
+        <img class="weather-icon" src="../images/rain.png" alt="rain-image" />
         <h1 class="temp">21°C</h1>
         <h2 class="city">Kadapa</h2>
         <!-- Start of Details page -->
         <div class="details">
           <!-- 1st column -->
           <div class="col">
-            <img src="../Weather App/images/humidity.png" alt="humidity" />
+            <img src="../images/humidity.png" alt="humidity" />
             <div>
               <p class="humidity">50%</p>
               <p>Humidity</p>
@@ -33,7 +33,7 @@
           <!-- End of 1st column -->
           <!-- 2nd column -->
           <div class="col">
-            <img src="../Weather App/images/wind.png" alt="wind" />
+            <img src="../images/wind.png" alt="wind" />
             <div>
               <p class="wind">15 KM/H</p>
               <p>Wind Speed</p>
@@ -47,6 +47,6 @@
     </div>
     <!-- end of card -->
 
-    <script src="../Weather App/JS/index.js"></script>
+    <script src="../JS/index.js"></script>
   </body>
 </html>
